[docs]: quickstart done